# maze

./: README.md  maze.cabal
app/: Main.hs
src/Data/: Maze.hs
test/Data/: MazeSpec.hs
