name:                maze
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/maze#readme
license:             BSD3
license-file:        LICENSE
author:              Jens Egholm Pedersen
maintainer:          jensegholm@protonmail.com
copyright:           2018 Jens Egholm Pedersen
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Maze
  build-depends:       base >= 4.7 && < 5,
                       random
  default-language:    Haskell2010

executable maze
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , maze
  default-language:    Haskell2010

test-suite maze-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , maze
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/volr/maze
